@@ -71,6 +71,8 @@ Changes since 2.1.3
 32. slsh/doc/tm/slsh.1: Added a small section to the slsh man page
     about customizing the readline environment.
 33. slsh/etc/slsh.rc: changed dir_exists from static to private
+34. src/slposio.c: The low level read/write functions should not be
+    restarted when errno is EAGAIN.
 
 {{{ Previous Versions
 
